Fix issue where logo and mobil menu button touch targets overlap.

--- a/assets/sass/_colors.scss
+++ b/assets/sass/_colors.scss
@@ -51,7 +51,7 @@ $colors: (
   autocomplete-select-bg: $blue,
 
   body-bg:                $white,
-  header-bg:              $brand,
+  header-bg:              $white,
   backdrop:               $grey-extra-light,
 
   mobile-menu:            $brand,
