--- a/assets/sass/mobile.scss
+++ b/assets/sass/mobile.scss
@@ -56,7 +56,7 @@
     right: var(--gutters);
     margin: 0;
     font-weight: var(--fw-bold);
-    background-color: transparent;
+    background-color: var(--color-text-bg);
     color: var(--color-text);
     z-index: 22;
     border: 1px solid var(--color-border);
